--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
   --headline-color: white;
@@ -8,14 +8,20 @@
   --text-color: rgba(255, 255, 255, 0.5);
 }
 
-html, body {
-  margin:0;
+html,
+body {
+  margin: 0;
   padding: 0;
   overflow-x: hidden;
   background-color: var(--background-color);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: var(--text-color);
   text-align: center;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
 }
 
 .canvas-container {
@@ -24,75 +30,28 @@ html, body {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  height: 80%;
-}
-
-.headline-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  pointer-events: none;
+  height: 100%;
 }
 
 h1 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
-#text-behind, #text-front, #text-behind-blur {
-  font-family: 'Roboto', sans-serif;
+.text-container {
   position: absolute;
-  text-align: center;
-  font-size: clamp(24px, 20vw, 200px);
-  text-transform: uppercase;
-  font-weight: 800;
-  letter-spacing: 10px;
-  line-height: 0.8;
-}
-
-#text-behind {
-  color: var(--headline-color);
-  z-index: 1;
-}
-
-#text-behind-blur {
-  color: var(--headline-color);
-  filter: blur(7.5px);
-  -webkit-filter: blur(7.5px);
-  z-index: 0;
-}
-
-#text-front {
-  /*  Set text-color to transparent to only show the outline  */
-  color: transparent;
-  text-stroke: 2px var(--headline-color);
-  -webkit-text-stroke: 2px var(--headline-color);
-  z-index: 3;
-}
-
-/* Less relevant code */
-
-.more-content{
-  height: 500vh;
-  width: 100vw;
-}
-
-.text-container{
   display: flex;
   flex-direction: column;
   align-items: center;
   top: 92%;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  z-index: 3;
+  width: 50%;
+  left: 25%;
+  /* add blur that fades out before the edges */
+  filter: blur(10px);
+  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 100));
+  animation: fade-in 1s ease-in-out forwards;
 }
 
-.title{
+.title {
   font-size: 0.5rem;
   text-align: center;
   text-transform: uppercase;
@@ -100,25 +59,26 @@ h1 {
   font-weight: 500;
 }
 
-.socials{
+.socials {
+  filter: none;
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.3));
 }
 
-.socials svg{
+.socials svg {
   margin: 0 5px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
   transform: scale(1);
 }
 
-.socials svg:hover{
+.socials svg:hover {
   transform: scale(1.2);
   filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 1));
 }
 
-p{
+p {
   width: 300px;
   font-size: 0.75rem;
 }
-
 
 a {
   color: rgba(255, 255, 255, 0.5);
@@ -126,6 +86,6 @@ a {
   transition: all 0.5s ease-in-out;
 }
 
-a:hover{
+a:hover {
   filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.9));
 }
