fix(CurrentSlide): fixed and support for arrow/wheel

--- a/style.css
+++ b/style.css
@@ -34,10 +34,12 @@ body {
 }
 
 h1 {
+  user-select: none;
   margin-bottom: 0;
 }
 
 .text-container {
+  user-select: none;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -51,6 +53,7 @@ h1 {
 }
 
 .title {
+  user-select: none;
   font-size: 0.5rem;
   text-align: center;
   text-transform: uppercase;
@@ -59,6 +62,7 @@ h1 {
 }
 
 .socials {
+  user-select: none;
   filter: none;
   filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.3));
 }
@@ -75,11 +79,13 @@ h1 {
 }
 
 p {
+  user-select: none;
   width: 300px;
   font-size: 0.75rem;
 }
 
 a {
+  user-select: none;
   color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
   transition: all 0.5s ease-in-out;
