feat(Mobile): basic mobile view

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   font-family: "Open Sans", sans-serif;
   color: var(--text-color);
   text-align: center;
+  touch-action: none;
 }
 
 #currentSlide {
