chore(Background): testing white on black

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --headline-color: white;
-  --background-color: #11151c;
+  --background-color: #ffffff;
   --text-color: rgba(255, 255, 255, 0.5);
 }
 
