--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h1 {
 .socials svg:hover {
   transform: scale(1.2);
   filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 1));
+  color: #000;
 }
 
 p {
