--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --headline-color: white;
-  --background-color: #ffffff;
+  --background-color: #cfcfcf;
   --text-color: rgba(0, 0, 0, 0.5);
 }
 
