--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ body {
 .main {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .canvas-container {
@@ -56,6 +59,10 @@ body {
 h1 {
   user-select: none;
   margin-bottom: 0;
+  z-index: 1000;
+  position: absolute;
+  display: flex;
+  color: rgba(255, 255, 255, 0.4);
 }
 
 .text-container {
@@ -67,34 +74,41 @@ h1 {
   top: 95.5%;
   width: 50%;
   left: 25%;
-  filter: blur(10px);
+
   filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 100));
   animation: fade-in 1s ease-in-out forwards;
 }
 
 .title {
+  position: absolute;
+  display: flex;
+
+  top: 5%;
+
+  z-index: 1000;
   user-select: none;
   font-size: 0.5rem;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
   font-weight: 500;
+  color: rgba(255, 255, 255, 0.4);
 }
 
 .socials {
   user-select: none;
-  filter: none;
-  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.3));
+  color: white;
 }
 
 .socials svg {
+  color: rgba(255, 255, 255, 0.4);
   margin: 0 5px;
   transition: all 0.2s ease-in-out;
   transform: scale(1);
 }
 
 .socials svg:hover {
-  transform: scale(1.2);
+  transform: scale(1.5);
   filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 1));
   color: #000;
 }
@@ -110,8 +124,4 @@ a {
   color: rgba(0, 0, 0, 0.5);
   text-decoration: none;
   transition: all 0.5s ease-in-out;
-}
-
-a:hover {
-  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.9));
 }
