fix(css): onload background color

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --headline-color: white;
-  --background-color: #cfcfcf;
+  --background-color: #000000;
   --text-color: rgba(0, 0, 0, 0.5);
 }
 
