--- a/style.css
+++ b/style.css
@@ -56,14 +56,23 @@ body {
   cursor: -webkit-grabbing;
 }
 
-h1 {
+.name {
   user-select: none;
   z-index: 1000;
-  margin-bottom: 10px;
-  display: flex;
   color: rgba(255, 255, 255, 0.4);
 }
 
+.subtitle {
+  z-index: 1000;
+  user-select: none;
+  font-size: 0.5rem;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.4);
+  bottom: 92%;
+}
 .text-container {
   user-select: none;
   position: absolute;
@@ -76,20 +85,6 @@ h1 {
 
   filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 100));
   animation: fade-in 1s ease-in-out forwards;
-}
-
-.title {
-  position: absolute;
-  display: flex;
-  z-index: 1000;
-  user-select: none;
-  font-size: 0.5rem;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 0.3rem;
-  font-weight: 500;
-  color: rgba(255, 255, 255, 0.4);
-  bottom: 92%;
 }
 
 .socials {
