--- a/style.css
+++ b/style.css
@@ -81,13 +81,17 @@ body {
 .subtitle {
   z-index: 1000;
   user-select: none;
-  font-size: 0.5rem;
+  font-size: 0.9rem;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
   font-weight: 500;
   color: rgba(255, 255, 255, 0.4);
   margin-bottom: 30px;
+}
+
+.text1 {
+  margin-bottom: 100px;
 }
 
 .loader {
